--- a/examples/frontend/src/LoginPage/LoginPage.css
+++ b/examples/frontend/src/LoginPage/LoginPage.css
@@ -1,5 +1,4 @@
 .LoginPage {
-    height: 100vh;
     font-family: Helvetica;
     text-align: center;
     color: #000000;
@@ -8,6 +7,14 @@
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #000000;
     opacity: 0.3; /* Firefox */
+}
+
+.sign {
+    float: left;
+    margin-bottom: 15px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #50a0e0;
 }
 
 .LoginImage {
@@ -34,13 +41,14 @@
 .LoginPanel {
     margin: auto;
     margin-top: 100px;
+    margin-bottom: 50px;
     padding: 20px;
     width: 100%;
     max-width: 400px;
-    height: 280px;
     border: none;
     border-radius: 6px;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 1);
+    box-sizing: border-box;
     box-shadow: 6px 8px 10px 0 rgba(0, 0, 0, 0.4), 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -60,6 +68,26 @@ input[type=text]{
 }
 
 input[type=text]:focus{
+    border: 3px solid #b0b0b0;
+    background-color: #ffffff;
+}
+
+input[type=password]{
+    width: 100%;
+    height: 60px;
+    margin: 0;
+    margin-bottom: 20px;
+    padding: 12px 20px;
+    text-align: center;
+    font-size: 18px;
+    border: none;
+    border-radius: 6px;
+    box-sizing: border-box;
+    color: #303030;
+    background-color: #f0f0f0;
+}
+
+input[type=password]:focus{
     border: 3px solid #b0b0b0;
     background-color: #ffffff;
 }
