--- a/examples/frontend/src/SelectRoom/SelectRoom.css
+++ b/examples/frontend/src/SelectRoom/SelectRoom.css
@@ -1,18 +1,21 @@
 .language-menu{
-    background-color: #f0f0f0;
+    background-color:#A98881;
     font-family: Helvetica;
     padding: 10px;
-    border-bottom: 1px solid #B0A4CA;
-    color: #604C8D;
+    border-bottom: 1px solid #F5F5F3;
+    color: #F5F5F3;
     text-align: left;
+    font-weight: bold;
 }
 
 .room-menu{
     background-color: white;
-    color: #422D72;
+    color: #392620;
     padding: 15px;
     text-align: left;
-    border-bottom: 1px solid rgb(204, 192, 233);
+    border-bottom: 1px solid #A98881;
+    display: flex;
+    justify-content: space-between;
 }
 
 .select-room-content{
@@ -20,15 +23,34 @@
 }
 
 .select-room-user-profile{
+    padding-top: 10px;
     width: 25%;
-    background-color: #f0f0f0;
+    background-color: #785B53;
 }
-
-.select-room-page{
+.select-room-header{
+    background-color: #392620;
+    padding: 20px;
+    font-weight: 900;
+    font-size: 30px;
+    color: #76D3C9; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.select-room-body{
     display: flex;
     align-items: stretch;
     min-height: 100vh;
     height: 100%;
+}
+
+.enter-room-button{
+    border: none;
+    font-size: 15px;
+    font-weight: bold;
+    color: WHITE;
+    background-color: #76D3C9;
+    padding: 0px 20px;
 }
 
 .profile-pic{
@@ -36,10 +58,32 @@
     margin: auto;
     width: 200px;
     height: 200px;
-    background-image: url("./asset/Daa_5e1VMAEYBtb.jpg");
+    background-image: url("./asset/profile_pic/Daa_5e1VMAEYBtb.jpg");
     background-size: cover;
 }
 
 .profile-info{
-    margin: 10px 0px;
+    color: #F5F5F3;
+    margin: 15px 0px;
+    line-height: 1.5
+}
+
+.header-icon{
+    margin-right: 10px;
+    width:40px;
+    height: 40px;
+    background-image: url("./asset/1afb4038427b2bd8edd275940aea269d-chat-service-icon-by-vexels.png");
+    background-size: cover;
+}
+
+.chat-room-icon{
+    margin-right: 10px;
+    width:50px;
+    height:50px;
+    background-size: cover;
+    
+}
+
+.chat-room-icon-detail{
+    display: flex;
 }
