--- a/examples/frontend/src/ChatRoom/ChatRoom.css
+++ b/examples/frontend/src/ChatRoom/ChatRoom.css
@@ -20,10 +20,42 @@
  .c6{
  	background-color: #3A2621;
  }
+ .f5{
+ 	color: #F5F5F3;
+ }
+ .f6{
+ 	color: #3A2621;
+ }
 body, html, .container {
     height: 100%;
 }
-body {
+.right{
+	float: right;
+}
+.left{
+	float: left;
+}
+ul {
+/*  list-style-type: none;
+*/  width:  100%;
+	padding: 0;
+}
+li {
+	width:  100%;
+	height: 20px;
+}
+
+.messages {
+  height: auto;
+  min-height: calc(100% - 93px);
+  max-height: calc(100% - 93px);
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+.badge{
+	font-weight: 10;
+}
+/*body {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,8 +68,8 @@ body {
   text-rendering: optimizeLegibility;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
   -webkit-font-smoothing: antialiased;
-}
-
+}*/
+/*
 #frame {
   width: 95%;
   min-width: 360px;
@@ -691,4 +723,4 @@ body {
 }
 #frame .content .message-input .wrap button:focus {
   outline: none;
-}
+}*/
