--- a/examples/frontend/src/RegisterPage/RegisterPage.css
+++ b/examples/frontend/src/RegisterPage/RegisterPage.css
@@ -190,3 +190,19 @@
     background-color: #ffffff;
     transition: 0.5s;
 }
+
+.KeeProfilePic{
+    margin: auto;
+    width: 100%;
+    max-width: 400px;
+    height: 100%;
+    max-height: 400px;
+    display: inline-block;
+}
+
+.KeeProfileDiv{
+    margin: auto;
+    margin-bottom: 20px;
+    max-width: 400px;
+    max-height: 400px;
+}
