edit default profile pic

--- a/examples/frontend/src/SelectRoom/SelectRoom.css
+++ b/examples/frontend/src/SelectRoom/SelectRoom.css
@@ -58,7 +58,7 @@
     margin: auto;
     width: 200px;
     height: 200px;
-    background-image: url("./asset/profile_pic/Daa_5e1VMAEYBtb.jpg");
+    background-color: WHITE;
     background-size: cover;
 }
 
